--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.0",
-    "react-scripts": "5.0.1"
+    "react-scripts": "^5.0.1",
+    "tailwind": "^4.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -33,8 +34,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "tailwindcss": "^3.2.4"
   }
 }
